--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.1.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "next": "14.2.13",
     "react": "^18",
     "react-big-calendar": "^1.14.1",
